--- a/src/styles/patternSelector.css
+++ b/src/styles/patternSelector.css
@@ -59,6 +59,22 @@
 	border: none
 }
 
+.pattern-selector__result-container {
+	display: flex;
+	width: 100%;
+	height: max-content;
+	align-items: center;
+	justify-content: center;
+}
+
+.pattern-selector__result-container p {
+	text-align: center;
+	font-size: 1.5em;
+	font-weight: bold;
+	margin-top: 3%;
+	margin-bottom: 3%;
+}
+
 
 @media screen and (max-width: 768px) {
 	.pattern-selector-container {
