:lipstick: menu re-worked

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -12,6 +12,9 @@ body {
         #005c97
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     color: #fff;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 .main-container {
