--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -53,3 +53,39 @@
 	font-size: 40px;
 }
 
+@media (max-width: 768px) {
+
+	.home__description-container {
+		width: 100%;
+		height: 100%;
+		flex-direction: column;
+		justify-content: space-around;
+	}
+
+	.home__description-container--title h3 {
+		font-size: 25px;
+		
+	}
+	.home__description-container--title {
+		margin-left: 0%;
+		text-align: center
+	}
+
+	.home__description-container--icon {
+		display: none;
+	}
+
+	.home__description-container--description {
+		width: 90%;
+		align-self: center;
+	}
+
+	.home__description-container--description p {
+		padding-top: 10%;
+		text-align: center;
+	}
+
+	
+	
+}
+
