--- a/src/styles/fight.css
+++ b/src/styles/fight.css
@@ -1,22 +1,25 @@
 .fight-container {
-	padding-top: 10px;
 	display: flex;
 	flex-direction: column;
-	/* max-height: calc(100vh - 94px); */
-	height: max-content;
-
+	min-height: max-content;
+	/* height: calc(100vh - 94px); */
 	overflow: hidden;
+	justify-content: center;
 }
 
 .fight-status__container {
 	display: flex;
 	justify-content: center;
 	width: 100%;
+	margin-top: 0.8rem;
+	padding: 0;
+
 }
 
 .fight-status__container h3 {
 	color: white;
 	font-size: 1.2rem;
+	margin: 0;
 }
 
 .fight-results__container {
@@ -26,7 +29,6 @@
 	width: 80%;
 	height: max-content;
 	justify-content: space-around;
-	gap: 5rem;
 }
 
 .fight-results__container-result {
@@ -46,14 +48,64 @@
 }
 
 .red {
-	background-color: red;
+	background-color: rgb(243, 71, 71);
 }
 
 .blue {
-	background-color: blue;
+	background-color: rgb(76, 76, 232);
 }
 
 .fight-buttons__container {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	width: 100%;
+	align-self: center;
+	margin-bottom: 0.8rem;
+}
+.fight-buttons__column {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+
+}
+.fight-buttons-points {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 80%;
+	gap: 0.8rem;
+}
+
+.fight-buttons-others {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
+	width: 100%;
+}
+
+.fight-buttons-points button {
+	border-radius: 3%;
+	width: 110%;
+	height: 80px;
+	border: 1px solid white;
+}
+
+.fight-buttons-others button{
+	border-radius: 3%;
+	width: 30%;
+	height: 50px;
+	font-size: 8px;
+	padding: 0;
+	margin-top: 10px;
+	border: 1px solid white;
+}
+
+/* .fight-buttons__container {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-evenly;
@@ -66,15 +118,15 @@
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	width: 45%;
-	gap: 10px;
+	width: 50%;
+	
 }
 .fight-buttons-points {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 98%;
+	width: 100%;
 }
 
 .fight-buttons-others {
@@ -86,19 +138,30 @@
 }
 
 .fight-buttons-points button {
-	border-radius: 10%;
+	border-radius: 0;
 	width: 100%;
-	margin-top: 10px;
-	height: 80px;
+	height: 90px;
+	border: 1px solid white;
 }
 
 .fight-buttons-others button{
-	border-radius: 10%;
-	width: max-content;
+	border-radius: 0;
+	width: 100%;
 	height: 50px;
 	font-size: 8px;
-	padding: 0;
+	padding: 0;	
+	border: 1px solid white;
+} */
+
+.fight-timer {
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	margin-top: 0.8rem;
+	margin-bottom: 0.8rem;
 }
 
-
-
+.fight-timer span {
+	font-size: 1.5rem;
+	color: white;
+}
