--- a/src/styles/patternSelector.css
+++ b/src/styles/patternSelector.css
@@ -1,11 +1,10 @@
 .pattern-selector-container {
-	display: flex;
+	display: flex;	
 	align-items: center;
 	justify-content: center;
 	width: 100%;
 	height: auto;
 	justify-content: space-evenly;
-	flex-wrap: wrap;
 }
 
 .pattern-selector__card {
@@ -33,7 +32,6 @@
 	border-radius: 3px;
 	box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
 	margin: 1%;
-	padding-inline: 5%;
 	justify-content: space-between;
 	align-items: center;
 }
@@ -80,6 +78,7 @@
 	.pattern-selector-container {
 		height: 100%;
 		justify-content: flex-start;
+		flex-wrap: wrap;
 	}
 
 	.pattern-selector__card {
@@ -92,6 +91,7 @@
 
 	.pattern-selector__card--options {
 		width: 100%;
+		padding: 0.5%;
 		margin-bottom: 3%;
 	}
 
