--- a/src/styles/challenges.css
+++ b/src/styles/challenges.css
@@ -1,3 +1,17 @@
+.challenges-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.challenges-counter {
+	font-size: 1.2rem;
+	text-align: center;
+	width: 98%;
+}
+
+
 .TodoItem {
     background-color: #eeeeee;
     position: relative;
@@ -9,6 +23,7 @@
     border-radius: 20px;
     text-align: center;
     color: black;
+	width: 95%;
 }
 
 .TodoItemCounter {
@@ -49,11 +64,20 @@
     text-align: center;
     color: black;
 }
-
+.TodoItem-Text-Container {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 5px;
+}
 .TodoItem-p {
-    margin: 24px 0 24px 24px;
+    margin: 0;
     width: calc(100% - 120px);
-    font-size: 18px;
+    font-size: 0.9rem;
     line-height: 24px;
     font-weight: 400;
 }
@@ -113,6 +137,25 @@
 }
 
 .btn-special {
+	margin-top: 15px;
 	border-radius: 20px;
 	background-color: rgb(89, 131, 255);
+}
+
+.challenges-restart-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	margin-top: 2rem;
+}
+
+.challenges-restart-container button {
+	background-color: red;
+	font-size: 0.5rem;
+	border: none;
+}
+
+.challenges-restart-container p {
+	font-size: 0.5rem
 }
