--- a/src/styles/fight.css
+++ b/src/styles/fight.css
@@ -163,5 +163,36 @@
 
 .fight-timer span {
 	font-size: 1.5rem;
-	color: white;
+}
+
+.fight-buttons-container {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 20px;
+}
+
+.fight-buttons-container button {
+	min-width: 50px;
+	height: max-content;
+	padding: 10px;
+	border-radius: 3%;
+	background-color: #212529;
+	border: 1px solid white;
+}
+
+.fight-mode-container {	
+	margin: 0 auto;
+	margin-top: 0.8rem;
+	padding-bottom: 0.8rem;
+}
+
+.fight-mode-container button {
+	font-size: 0.6rem;
+	min-width: 50px;
+	height: max-content;
+	padding: 5px;
+	border-radius: 3%;
+	background-color: #ffffff;
+	color: #212529;
 }
