quiz styles re-worked

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -11,7 +11,7 @@ body {
         #363795,
         #005c97
     ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    color: #fff;
+    color: rgb(255, 255, 255);
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
