--- a/src/styles/quiz.css
+++ b/src/styles/quiz.css
@@ -14,6 +14,93 @@
     justify-content: space-evenly;
 }
 
+.quiz-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	width: 100%;
+	gap: 15px;
+}
+
+.quiz-container h1 {
+	text-align: center;
+	font-size: 1.5rem;
+	font-weight: 500;
+	padding: 0;
+	margin: 0;
+	margin-top: 10px;
+}
+
+.quiz-selection {
+	margin: 0 auto;
+	width: 80%;
+}
+
+.quiz-selection button {
+	width: 100%;
+	color: #212529;
+	border: none;
+}
+
+
+.btn-white {
+	background-color: white;
+}
+
+.btn-yellow-stripe {
+	
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+        90deg,
+        rgba(255, 255, 255, 1) 71%,
+        rgba(255, 193, 7, 1) 74%
+    );
+}
+
+.btn-yellow {
+	background-color: rgba(255, 193, 7, 1);
+}
+
+.btn-green-stripe {
+    background: rgb(255,193,7);
+	background: linear-gradient(90deg, rgba(255,193,7,1) 71%, rgba(25,135,84,1) 74%);
+}
+
+.btn-green {
+	background-color: rgba(25, 135, 84, 1);
+}
+
+.btn-blue-stripe {
+    background: rgb(25,135,84);
+	background: linear-gradient(90deg, rgba(25,135,84,1) 71%, rgba(13,110,253,1) 74%);
+}
+
+.btn-blue {
+	background-color: rgba(13, 110, 253, 1);
+}
+
+.btn-red-stripe {
+	background: rgb(13,110,253);
+	background: linear-gradient(90deg, rgba(13,110,253,1) 71%, rgba(220,53,69,1) 74%);
+}
+
+.btn-red {
+	background-color: rgba(220, 53, 69, 1);
+}
+
+.btn-black-stripe {
+	background: rgb(220,53,69);
+	background: linear-gradient(90deg, rgba(220,53,69,1) 71%, rgba(33,37,41,1) 74%);
+	color: white !important;
+	cursor: default;
+	opacity: 0.5;
+}
+
+.btn-black {
+	background-color: rgba(33, 37, 41, 1);
+	color: white !important; 
+}
+
 .score-section {
     display: flex;
     font-size: 24px;
