--- a/src/styles/quiz.css
+++ b/src/styles/quiz.css
@@ -1,19 +1,3 @@
-.app {
-	position: relative;
-    background-color: #252d4a;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	;
-    width: 100%;
-    min-height: 200px;
-    height: min-content;
-    border-radius: 15px;
-    padding: 20px;
-    box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
-    display: flex;
-    justify-content: space-evenly;
-}
-
 .quiz-container {
 	display: flex;
 	flex-direction: column;
@@ -107,8 +91,114 @@
     align-items: center;
 }
 
+.quiz-questions-title {
+	text-align: center;
+	font-size: 1.5rem;
+	font-weight: 500;
+	padding: 0;
+	margin: 0;
+	margin-top: 10px;
+}
+
+.quiz-card {
+    display: flex;
+	margin: 0 auto;
+	flex-direction: column;
+    justify-content: space-evenly;
+	background-color: #252d4a;
+	margin-top: 20px;
+	margin-bottom: 20px;
+    width: 85%;
+    min-height: 200px;
+    height: min-content;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 10px 10px 42px 0px rgba(0, 0, 0, 0.75);
+	font-size: 1.3rem;
+}
+
+.quiz-card span:nth-child(2) {
+	text-align: center;
+	margin-top: 1.2rem;
+}
+
+.quiz-card span b {
+	font-size: 1.8rem;
+}
+
+.quiz-answer-buttons {
+	display: flex;
+	width: 100%;
+	flex-direction: column;
+	gap: 15px;
+	margin-top: 1.2rem;
+	align-items: center;
+}
+
+.quiz-answer-buttons button {
+	width: 100%;
+	background-color: #212529;
+	border: none;
+	font-weight: normal;
+	padding: 0.8rem;
+	font-size: 1rem;
+	line-height: 1.5rem;
+	border-radius: 15px;
+}
+
+.quiz-result-text {
+	text-align: center;
+}
+
+.quiz-result-image {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+}
+
+.quiz-result-input {
+	margin-top: 0.8rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.quiz-result-input input {
+	width: 80%;
+	padding: 0.4rem;
+	border-radius: 15px;
+	border: none;
+}
+
+.quiz-result-input button {
+	margin-top: 0.8rem;
+	font-size: 1.0rem;
+	background-color: #212529;
+	border: none;
+}
+
+.quiz-result-help {
+	text-align: center;
+	margin-top: 0.8rem;
+}
+
+.quiz-button-back {
+	display: flex;
+	justify-content: center;
+}
+
+.quiz-button-back button {
+	margin-top: 0.8rem;
+	font-size: 1.0rem;
+	background-color: #212529;
+	border: none;
+	margin-bottom: 0.8rem;
+}
+
 /* QUESTION/TIMER/LEFT SECTION */
-.question-section {
+/* .question-section {
     width: 100%;
     position: relative;
 }
@@ -175,4 +265,4 @@ button svg {
 	.result {
 		width: 80%;
 	}
-}
+} */
