--- a/src/styles/quiz.css
+++ b/src/styles/quiz.css
@@ -26,7 +26,6 @@
 	border: none;
 }
 
-
 .btn-white {
 	background-color: white;
 }
@@ -83,12 +82,6 @@
 .btn-black {
 	background-color: rgba(33, 37, 41, 1);
 	color: white !important; 
-}
-
-.score-section {
-    display: flex;
-    font-size: 24px;
-    align-items: center;
 }
 
 .quiz-questions-title {
@@ -175,7 +168,7 @@
 .quiz-result-input button {
 	margin-top: 0.8rem;
 	font-size: 1.0rem;
-	background-color: #212529;
+	background-color: #5378fb;
 	border: none;
 }
 
@@ -197,72 +190,3 @@
 	margin-bottom: 0.8rem;
 }
 
-/* QUESTION/TIMER/LEFT SECTION */
-/* .question-section {
-    width: 100%;
-    position: relative;
-}
-
-.question-count {
-    margin-bottom: 20px;
-}
-
-.question-count span {
-    font-size: 28px;
-}
-
-.question-text {
-    margin-bottom: 12px;
-}
-
-
-.answer-section {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.quiz-button {
-    width: 100%;
-    font-size: 16px;
-    color: #ffffff;
-    background-color: #252d4a;
-    border-radius: 15px;
-    display: flex;
-    padding: 5px;
-    justify-content: flex-start;
-    align-items: center;
-    border: 5px solid #234668;
-    cursor: pointer;
-}
-
-button:hover {
-    background-color: #555e7d;
-}
-
-button:focus {
-    outline: none;
-}
-
-button svg {
-    margin-right: 5px;
-}
-
-.result-title {
-	width: 30%;
-	margin: 0 auto;
-}
-.result {
-	width: 30%;
-	margin: 0 auto;
-}
-
-@media screen and (max-width: 600px) {
-	.result-title {
-		width: 100%;
-	}
-	.result {
-		width: 80%;
-	}
-} */
