--- a/src/styles/patternSelector.css
+++ b/src/styles/patternSelector.css
@@ -77,7 +77,7 @@
 @media screen and (max-width: 768px) {
 	.pattern-selector-container {
 		height: 100%;
-		justify-content: flex-start;
+		justify-content: center;
 		flex-wrap: wrap;
 	}
 
