--- a/src/styles/cintos.css
+++ b/src/styles/cintos.css
@@ -1,7 +1,7 @@
 .cintos {
 	display: flex;
 	flex-direction: column;
-	background-color: rgb(255, 0, 0)
+	background-color: #596296
 }
 
 .cintos h1 {
