--- a/src/styles/cintos.css
+++ b/src/styles/cintos.css
@@ -25,7 +25,7 @@
 
 .cintos-grid p {
 	padding-right: 20px;
-	text-align: center;
+	text-align: justify;
 }
 
 .cintos-grid-image-container {
@@ -35,6 +35,7 @@
 
 .cintos-black {
 	background-color: #212529;
+	
 }
 
 .cintos-white {
@@ -68,7 +69,8 @@
 	}
 
 	.cintos-grid p {
-		padding-right: 0;
+		padding-right: 10px;
+		padding-left: 10px;
 	}
 
 	.cintos-wave-container {
