cintos colors re-worked

--- a/src/styles/cintos.css
+++ b/src/styles/cintos.css
@@ -78,8 +78,8 @@
 }
 
 .cintos-blue {
-	background-color: #2341e8;
-	border-top: 1px solid #2341e8;
+	background-color: #7f8fef;
+	border-top: 1px solid #7f8fef;
 	color: #fff;
 	margin-top: 4px;
 	margin-bottom: -5px;
