--- a/src/styles/formas.css
+++ b/src/styles/formas.css
@@ -1,11 +1,15 @@
+.dojang-formas {
+	background-color: #f2f2f2;
+}
+
 .dojang-formas h1 {
 	text-align: center;
-	background-color: #f2f2f2;
 	margin: 0 auto;
 	color: #212529;
+	margin-bottom: 10px;
 }
-.dojang-pattern-grid {
 
+.dojang-pattern-grid {
 	margin: 0 auto;
 	display: grid;
 	grid-template-columns: repeat(250px);
@@ -14,6 +18,7 @@
 	padding-left: 10%;
 	padding-right: 10%;
 	padding-bottom: 10px;
+	margin-bottom: 10px;
 }
 
 .even {
@@ -27,7 +32,38 @@
 	color: #f2f2f2;
 }
 
-.dojang-pattern-grid h2{
+.dojang-yellowStripe {
+	background: rgb(255, 255, 255);
+	background: linear-gradient(
+		-270deg,
+		rgba(255, 255, 255, 1) 78%,
+		rgba(245, 255, 70, 1) 94%
+	);
+	color: #212529;
+}
+
+.dojang-yellow {
+	background-color: #f5ff46;
+	color: #212529;
+}
+
+.dojang-greenStripe {
+	background: rgb(255, 255, 255);
+	background: linear-gradient(-270deg, #f5ff46 78%, rgba(0, 255, 0, 1) 94%);
+	color: #212529;
+}
+
+.dojang-green {
+	background-color: #00ff00;
+	color: #212529;
+}
+
+.dojang-blueStripe {
+	background: rgb(255, 255, 255);
+	background: linear-gradient(-270deg, #00ff00 78%, rgba(0, 0, 255, 1) 94%);
+	color: #212529;
+}
+.dojang-pattern-grid h2 {
 	grid-column-start: 1;
 	grid-column-end: 3;
 	text-align: center;
@@ -53,11 +89,13 @@
 	grid-column-end: 3;
 }
 
-.dojang-pattern-description p, .dojang-pattern-movements p {
-	text-align: justify
+.dojang-pattern-description p,
+.dojang-pattern-movements p {
+	text-align: justify;
 }
 
-.dojang-pattern-description h3, .dojang-pattern-movements h3 {
+.dojang-pattern-description h3,
+.dojang-pattern-movements h3 {
 	text-align: center;
 }
 
