--- a/src/styles/dojangMenu.css
+++ b/src/styles/dojangMenu.css
@@ -10,17 +10,17 @@
 
 .dojang-menu li {
 	cursor: pointer;
-	border-right: 2px solid white;
+	border-right: 2px solid rgb(90, 90, 90);
 	width: 100%;
 	height: 100%;
 	line-height: 50px;
 	text-align: center;
-	background-color: rgb(235, 39, 62);
+	background-color: #212529;
 	transition: all 1s;
 }
 
 .dojang-menu li:hover {
-	background-color: rgb(227, 91, 91);
+	
 	width: 150%;
 }
 
