--- a/src/styles/formas.css
+++ b/src/styles/formas.css
@@ -1,14 +1,6 @@
 .dojang-formas {
-	background: rgb(255, 255, 255);
-	background: linear-gradient(
-		180deg,
-		rgba(255, 255, 255, 1) 6%,
-		rgba(238, 236, 112, 1) 20%,
-		rgba(142, 250, 160, 1) 33%,
-		rgba(146, 150, 250, 1) 48%,
-		rgba(253, 109, 109, 1) 64%,
-		rgba(33, 37, 41, 1) 75%
-	);
+	background: rgb(255,255,255);
+background: linear-gradient(180deg, rgba(255,255,255,1) 6%, rgba(253,253,150,1) 20%, rgba(189,236,182,1) 33%, rgba(117,148,246,1) 48%, rgba(255,124,124,1) 64%, rgba(33,37,41,1) 75%);
 }
 
 .dojang-formas h1 {
@@ -26,6 +18,12 @@
 	padding-left: 10%;
 	padding-right: 10%;
 	padding-bottom: 10px;
+	opacity: 1;
+	transition: all 1s;
+}
+
+.dojang-pattern-grid:hover {
+	opacity: 1;
 }
 
 .odd {
@@ -133,6 +131,7 @@
 	.dojang-pattern-grid {
 		grid-template-columns: repeat(1, 1fr);
 		grid-template-rows: repeat(minmax(100px, auto));
+		opacity: 1;
 	}
 
 	.dojang-pattern-grid h2 {
