--- a/src/styles/formas.css
+++ b/src/styles/formas.css
@@ -10,6 +10,7 @@
 		rgba(33, 37, 41, 1) 38%
 	);
 	overflow-x: hidden;
+	overflow-y: hidden;
 }
 
 .dojang-formas h1 {
@@ -84,7 +85,7 @@
 	grid-column-start: 1;
 	grid-column-end: 4;
 	text-align: center;
-	font-size: 2rem;
+	font-size: 2.5rem;
 }
 
 .dojang-pattern-img {
