--- a/src/styles/formas.css
+++ b/src/styles/formas.css
@@ -117,9 +117,9 @@
 	height: 150px;
 }
 
-.dojang-pattern-diagram-img img {
-	border-radius: 50%;
-}
+/* .dojang-pattern-diagram-img img {
+	border-radius: 100%;
+} */
 
 .dojang-pattern-description {
 	grid-column-start: 3;
