--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -1,3 +1,48 @@
+/* USER INFO */
+
+.dashboard-profile-card {
+	display: flex;
+	margin: 0 auto;
+	width: 85%;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	padding: 1rem;
+	border-radius: 0.5rem;
+	background-color: #212529;
+	color:rgb(255, 255, 255);
+	margin-top: 10px;
+}
+
+.dashboard-profile-image {
+	position: relative;
+	width: 150px;
+	height: 150px;
+}
+
+.dashboard-profile-image img {
+	width: 150px;
+	height: 150px;
+}
+
+.dashboard-profile-grid {
+	display: grid;
+	/* make the row height adapt to content */
+	grid-template-columns: max-content 1fr;
+	grid-template-rows: 50px 50px 50px;
+	width: 100%;
+}
+
+.dashboard-profile-grid p {
+	min-width: 100%;
+	margin: 0;
+}
+/* seleccionar p pares */
+.dashboard-profile-grid p:nth-child(even) {
+	text-align: right;
+}
+
+
 .dashboard-main a {
 	color: rgb(255, 0, 0);
 	text-decoration: none;
