--- a/src/styles/register.css
+++ b/src/styles/register.css
@@ -4,17 +4,25 @@
 	border-radius: 5px;
 	box-shadow: 0 0 10px #ccc;
 	margin: 0 auto;
-	padding: 20px;
-	width: 400px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	width: 500px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
+.register-form-group {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 100%;
+}
+
 .register h1 {
-	font-size: 20px;
+	font-size: 30px;
 	margin-bottom: 20px;
-	color: black;
+	color: #212529;
 	text-align: center;
 }
 
@@ -25,34 +33,157 @@
 }
 
 .register button {
-	background-color: #fff;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	box-shadow: 0 0 10px #ccc;
-	color: black;
-	cursor: pointer;
-	display: block;
-	font-size: 16px;
+	width: min-content;
+	color: white;
+	background-color: #212529;
 	margin: 0 auto;
-	padding: 10px;
-	width: 100px;
+	margin-top: 10px;
+}
+
+.register button:hover {
+	background-color: #343a40;
 }
 
 .register p {
 	font-size: 14px;
 	margin-bottom: 20px;
-	color: black;
+	color: #212529;
 	text-align: center;
 }
 
 .register a {
-	color: black;
+	color: #212529;
 	text-decoration: none;
 	font-weight: bold;
 }
 
+.register a:hover {
+	color: #343a40;
+}
+
+.register-form-inputs {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-template-rows: 1fr auto;
+	width: 100%;
+	align-items: center;
+	gap: 10px;
+}
+
+.register-form-inputs input {
+	padding: 6px;
+	font-size: 14px;
+    border-width: 1px;
+    border-color: #fbf9f9;
+    background-color: #ffffff;
+    color: #212529;
+    border-style: solid;
+    border-radius: 20px;
+    box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+	padding-left: 20px;
+}
+
+.register-form-inputs input:focus {
+	outline:none;
+}
+
+.register-form-inputs label {
+	color: #212529;
+	text-align: center;
+}
+
+.register-avatar-boxes {
+	display: grid;
+	margin: 0 auto;
+	grid-template-columns: 1fr 1fr 1fr 1fr;
+	gap: 10px;
+	padding-bottom: 10px;
+}
+
+.register-avatar-boxes h2 {
+	grid-column: 1 / 5;
+	grid-row: 1;
+	color: #212529;
+	text-align: center;
+}
+
+.register-avatar-box {
+	position: relative;
+	width: 100px;
+	height: 100px;
+}
+
+.register-avatar-choose {
+	box-shadow: 0 0 10px rgb(130, 130, 130);
+	border-radius: 10px;
+	background-color: rgba(206, 209, 235, 0.5);
+}
+
+.register-avatar-box input[type="radio"] {
+	display: none;
+}
+
+.register-form-error {
+	color: red !important;
+	font-size: 12px;
+}
+
+
+
 @media (max-width: 768px) {
 	.register {
-		width: 80%
+		width: 80%;
+	}
+
+	.register h1 {
+		font-size: 25px;
+		margin-bottom: 5px;
+		margin-top: 5px;
+	}
+
+	.register-form-inputs {
+		grid-template-columns: 1fr;
+		grid-template-rows: auto;
+		width: 200px;
+		gap: 10px;
+		font-size: 14px;
+	}
+
+	.register-form-inputs input {
+		padding: 4px;
+		font-size: 12px;
+		border-width: 1px;
+		border-color: #fbf9f9;
+		background-color: #ffffff;
+		color: #212529;
+		border-style: solid;
+		border-radius: 20px;
+		box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+		padding-left: 15px;
+	}
+
+	.register-avatar-boxes {
+		grid-template-columns: 1fr 1fr;
+		width: 100%;
+	}
+
+	.register-avatar-boxes h2 {
+		grid-column: 1 / 3;
+		grid-row: 1;
+		font-size: 15px;
+	}
+
+	.register-avatar-box {
+		width: 75px;
+		height: 75px;
+		margin: 0 auto;
+	}
+
+	.register button {
+		width: min-content;
+		color: white;
+		background-color: #212529;
+		margin: 0 auto;
+		margin-top: 5px;
 	}
 }
