--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,8 +1,7 @@
 .login-section {
 	background-color: #fff;
-	border: 1px solid #ccc;
-	border-radius: 5px;
-	box-shadow: 0 0 10px #ccc;
+	border: 5px double rgba(13, 65, 164, 0.5);
+	border-radius: 11px;
 	margin: 0 auto;
 	margin-top: 20px;
 	margin-bottom: 20px;
@@ -11,6 +10,7 @@
 	flex-direction: column;
 	align-items: center;
 	color: #212529;
+	/* double border */
 }
 
 .login-section h1 {
@@ -42,13 +42,13 @@
 .login-form input {
 	padding: 6px;
 	font-size: 14px;
-    border-width: 1px;
-    border-color: #fbf9f9;
-    background-color: #ffffff;
-    color: #212529;
-    border-style: solid;
-    border-radius: 20px;
-    box-shadow: 0px 0px 5px rgba(66,66,66,.75);
+	border-width: 1px;
+	border-color: #fbf9f9;
+	background-color: #ffffff;
+	color: #212529;
+	border-style: solid;
+	border-radius: 20px;
+	box-shadow: 0px 0px 5px rgba(66, 66, 66, 0.75);
 	padding-left: 20px;
 }
 
@@ -110,7 +110,7 @@
 	}
 
 	.login-form button {
-		grid-column: 1 / 2 ;
+		grid-column: 1 / 2;
 	}
 
 	.login-section p {
