--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -23,6 +23,7 @@
 .dashboard-profile-image img {
 	width: 150px;
 	height: 150px;
+	border-radius: 50%;
 }
 
 .dashboard-profile-grid {
@@ -71,10 +72,6 @@
 	border-right: 1px solid black;
 }
 
-.dashboard-ranking-item div {
-	width: 25%;
-}
-
 .dashboard-ranking-first {
 	display: flex;
 	width: 100%;
@@ -99,6 +96,21 @@
 .dashboard-ranking-item:nth-child(odd) {
 	background-color: #f2f2f2;
 	color: black;
+}
+
+.ranking-photo {
+	position: relative;
+	margin: 0 auto;
+	width: 50px;
+	height: 50px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	place-items: center;
+	align-items: center;
+}
+
+.ranking-photo img {
+	border-radius: 50%;
 }
 
 
