--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -38,6 +38,66 @@
 	border-radius: 50%;
 }
 
+.dashboard-profile-card input[type="file"] {
+	display: none;
+}
+
+.dashboard-edit-display-name {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.dashboard-edit-display-name input {
+	display: inline-block;
+	padding: 6px;
+	font-size: 14px;
+	border-width: 1px;
+	border-color: #fbf9f9;
+	background-color: #ffffff;
+	color: #212529;
+	border-style: solid;
+	border-radius: 20px;
+	box-shadow: 0px 0px 5px rgba(66, 66, 66, 0.75);
+	padding-left: 20px;
+}
+
+.dashboard-edit-display-name button {
+	color: white;
+	background-color: #212529;
+	margin: 0 auto;
+	margin-left: 20px;
+	border-radius: 20px;
+}
+
+.dashboard-custom-file {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+.dashboard-custom-file button {
+	color: white;
+	background-color: #212529;
+	margin: 0 auto;
+	margin-left: 20px;
+}
+
+.custom-file-upload {
+	margin-top: 10px;
+	margin-bottom: 10px;
+	border: 2px solid rgb(255, 255, 255);
+	display: inline-block;
+	padding: 6px;
+	cursor: pointer;
+	border-radius: 5px;
+}
+
+.custom-file-upload p {
+	display: inline;
+	padding-left: 40px;
+}
+
 .dashboard-profile-image i {
 	position: absolute;
 	top: 0;
@@ -75,7 +135,6 @@
 	align-items: center;
 	margin: 0 auto;
 	margin-bottom: 15px;
-	
 }
 
 .dashboard-ranking-item {
@@ -122,7 +181,7 @@
 }
 
 .dashboard-ranking-item:nth-child(odd) {
-	background-color: #f2f2f2;
+	background-color: #cecece;
 	color: #212529;
 }
 
@@ -144,6 +203,16 @@
 
 .ranking-photo img {
 	border-radius: 50%;
+}
+
+.dashboard-profile-grid button {
+	width: min-content;
+	height: 100%;
+	border: none;
+	background-color: transparent;
+	color: inherit;
+	grid-column: 2/3;
+	justify-self: right;
 }
 
 
