--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -12,6 +12,7 @@
 	background-color: #212529;
 	color:rgb(255, 255, 255);
 	margin-top: 10px;
+	margin-bottom: 10px;
 }
 
 .dashboard-profile-card h1 {
@@ -76,6 +77,12 @@
 	align-items: center;
 }
 
+.dashboard-profile-button-container {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	grid-gap: 10px;
+}
+
 .dashboard-custom-file button {
 	color: white;
 	background-color: #212529;
@@ -110,6 +117,7 @@
 	grid-template-columns: max-content 1fr;
 	grid-template-rows: 50px 50px 50px;
 	width: 100%;
+	overflow: hidden;
 }
 
 .dashboard-profile-grid p {
