--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -1,31 +1,67 @@
 .album-page {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 10px;
-	padding: 20px;
+	height: calc(100vh - 64px); 
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row-reverse;
+	justify-content: space-around;
+	align-items: center;
+}
+
+.new-pack {
+	height: max-content;
+	padding-bottom: 20px;
 }
 
 .album-sticker {
 	position: relative;
 	width: 250px;
 	height: 150px;
+	border: 4px solid white;
+	overflow: hidden;
+}
+
+.album-sticker-vertical {
+	position: relative;
+	width: 150px;
+	height: 250px;
+	border: 4px solid white;
+	overflow: hidden;
 }
 
 .album-sticker-number  {
 	position: absolute;
-	top: 50%;
+	top: 1;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	width: 50px;
 	height: 50px;
-	background-color: rgba(255, 255, 255, 0.5);
+	background-color: rgba(255, 255, 255, 1);
 	color: black;
 	font-size: 20px;
-	line-height: 50px;
+	line-height: 75px;
 	text-align: center;
 	border-radius: 50%;
 	z-index: 1;
 	margin: 0 auto;
+}
+
+.album-sticker-number-clicked {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 25px;
+	height: 10px;
+	background-color: rgba(255, 255, 255, 0.8);
+	color: rgba(0, 0, 0, 0.8);
+	font-size: 10px;
+	line-height: 10px;
+	text-align: center;
+	z-index: 1;
+	margin: 0 auto;
+	border-left: 1px solid rgba(0, 0, 0, 0.8);
+	border-top: 1px solid rgba(0, 0, 0, 0.8);
+	transition: 2s;
 }
 
 .album-sticker-pasted-button {
