--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -16,17 +16,26 @@
 .album-sticker {
 	position: relative;
 	width: 250px;
-	height: 150px;
+	height: 187.5px;
 	border: 4px solid white;
 	overflow: hidden;
 }
 
 .album-sticker-vertical {
 	position: relative;
-	width: 150px;
+	width: 187.5px;
 	height: 250px;
 	border: 4px solid white;
 	overflow: hidden;
+}
+
+.album-sticker-circular {
+	position: relative;
+	width: 200px;
+	height: 200px;
+	border: none;
+	overflow: hidden;
+	border-radius: 50%;
 }
 
 .album-sticker-number  {
@@ -86,8 +95,10 @@
 	}
 
 	.album-sticker {
-		width: 200px;
-		height: 100px;
+		margin-bottom: 25px;
 	}
 
+	.album-sticker-vertical {
+		margin-bottom: 25px;
+	}
 }
