--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -1,4 +1,23 @@
+/* .album-page {
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	flex-direction: row-reverse;
+	justify-content: space-around;
+	align-items: center;
+} */
+
 .album-page {
+	display: grid;
+	width: 100%;
+	height: 1000px;
+	/* 12 columnas iguales y 12 filas iguales */
+	grid-template-columns: repeat(12, calc(100% / 12));
+	grid-template-rows: repeat(12, calc(100% / 12));
+	margin: 0 auto;
+}
+
+.new-pack {
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
@@ -7,12 +26,8 @@
 	align-items: center;
 }
 
-.new-pack {
-	height: max-content;
-	padding-bottom: 20px;
-}
-
-.album-sticker {
+.new-sticker {
+	display: inline-block;
 	position: relative;
 	width: 250px;
 	height: 187.5px;
@@ -20,7 +35,8 @@
 	overflow: hidden;
 }
 
-.album-sticker-vertical {
+.new-sticker-vertical {
+	display: inline-block;
 	position: relative;
 	width: 187.5px;
 	height: 250px;
@@ -28,10 +44,85 @@
 	overflow: hidden;
 }
 
-.album-sticker-circular {
+.sticker1 {
+	grid-column: 8 / 10;
+	grid-row: 2 / 4;
+}
+
+.sticker2 {
+	grid-column: 10 / 12 ;
+	grid-row: 5 / 8;
+}
+
+.sticker3 {
+	grid-column: 3 / 6;
+	grid-row: 2 / 4;
+}
+
+.sticker4 {
+	grid-column: 6 / 9;
+	grid-row: 5 / 7;
+}
+
+.sticker5 {
+	grid-column: 2 / 5;
+	grid-row: 5 / 8;
+}
+
+.sticker6 {
+	grid-column: 2 / 4 ;
+	grid-row: 9 /12 ;
+}
+
+.sticker6 .album-sticker-vertical {
+	border-right: none;
+}
+
+.sticker7 {
+	grid-column: 4 / 6;
+	grid-row: 9 / 12;
+}
+
+.sticker7 .album-sticker-vertical {
+	border-left: none;
+}
+
+.sticker8 {
+	grid-column: 9 / 12;
+	grid-row: 9 / 11;
+}
+
+
+
+
+.new-pack {
+	height: max-content;
+	padding-bottom: 20px;
+}
+
+.album-sticker {
+	display: inline-block;
 	position: relative;
-	width: 200px;
-	height: 200px;
+	width: 100%;
+	height: 100%;
+	border: 4px solid white;
+	overflow: hidden;
+}
+
+.album-sticker-vertical {
+	display: inline-block;
+	position: relative;
+	width: 100%;
+	height: 100%;
+	border: 4px solid white;
+	overflow: hidden;
+}
+
+.album-sticker-circular {
+	display: inline-block;
+	position: relative;
+	width: 100%;
+	height: 100%;
 	border: none;
 	overflow: hidden;
 	border-radius: 50%;
