--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -15,6 +15,7 @@
 	grid-template-columns: repeat(12, calc(100% / 12));
 	grid-template-rows: repeat(12, calc(100% / 12));
 	margin: 0 auto;
+	padding-bottom: 20px;
 }
 
 .new-pack {
@@ -47,6 +48,11 @@
 .sticker1 {
 	grid-column: 8 / 10;
 	grid-row: 2 / 4;
+}
+
+.sticker1:hover, .sticker2:hover, .sticker3:hover, .sticker4:hover, .sticker5:hover, .sticker6:hover, .sticker7:hover, .sticker8:hover {
+	transform: scale(1.2);
+	transition: 0.5s;
 }
 
 .sticker2 {
@@ -178,17 +184,54 @@
 }
 
 @media (max-width: 768px) {
-	/* .album-page {
-		grid-template-columns: repeat(1, 1fr);
+	.album-page {
+		display: grid;
+		width: 90%;
+		height: 800px;
+		/* 12 columnas iguales y 12 filas iguales */
+		grid-template-columns: repeat(12, calc(100% / 12));
+		grid-template-rows: repeat(12, calc(100% / 12));
 		margin: 0 auto;
-		place-items: center;
+		padding-top: 10px;
 	}
 
-	.album-sticker {
-		margin-bottom: 25px;
+	.sticker1 {
+		grid-column: 9 / 13;
+		grid-row: 1 / 3;
+	}
+	
+	.sticker2 {
+		grid-column: 9 / 13 ;
+		grid-row: 7 / 10;
+	}
+	
+	.sticker3 {
+		grid-column: 3 / 7;
+		grid-row: 1 / 3;
+	}
+	
+	.sticker4 {
+		grid-column: 8 / 13;
+		grid-row: 4 / 6;
+	}
+	
+	.sticker5 {
+		grid-column: 2 / 6;
+		grid-row: 4 / 7;
+	}
+	
+	.sticker6 {
+		grid-column: 2 / 5 ;
+		grid-row: 8 /10 ;
 	}
 
-	.album-sticker-vertical {
-		margin-bottom: 25px;
-	} */
+	.sticker7 {
+		grid-column: 5 / 8;
+		grid-row: 8 / 10;
+	}
+	
+	.sticker8 {
+		grid-column: 5 / 11;
+		grid-row: 11 / 13;
+	}
 }
