--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -60,7 +60,7 @@
 	grid-row: 2 / 4;
 }
 
-.sticker1:hover, .sticker2:hover, .sticker3:hover, .sticker4:hover, .sticker5:hover, .sticker6:hover, .sticker7:hover, .sticker8:hover {
+.sticker-pasted:hover {
 	transform: scale(1.2);
 	transition: 0.5s;
 }
