--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -10,12 +10,12 @@
 .album-page {
 	display: grid;
 	width: 100%;
-	height: 1000px;
+	height: 1500px;
 	/* 12 columnas iguales y 12 filas iguales */
-	grid-template-columns: repeat(12, calc(100% / 12));
-	grid-template-rows: repeat(12, calc(100% / 12));
+	grid-template-columns: repeat(24, calc(100% / 24));
+	grid-template-rows: repeat(24, calc(100% / 24));
 	margin: 0 auto;
-	padding-bottom: 20px;
+	padding-bottom: 40px;
 }
 
 .new-pack {
@@ -56,38 +56,39 @@
 }
 
 .sticker1 {
-	grid-column: 8 / 10;
-	grid-row: 2 / 4;
+	grid-column: 10 / 17;
+	grid-row: 2 / 8;
 }
 
 .sticker-pasted:hover {
 	transform: scale(1.2);
 	transition: 0.5s;
+	z-index: 1;
 }
 
 .sticker2 {
-	grid-column: 10 / 12 ;
-	grid-row: 5 / 8;
+	grid-column: 10 / 16 ;
+	grid-row: 9 / 17;
 }
 
 .sticker3 {
-	grid-column: 3 / 6;
-	grid-row: 2 / 4;
+	grid-column: 2 / 9;
+	grid-row: 7 / 11;
 }
 
 .sticker4 {
-	grid-column: 6 / 9;
-	grid-row: 5 / 7;
+	grid-column: 17 / 24;
+	grid-row: 7 / 11;
 }
 
 .sticker5 {
-	grid-column: 2 / 5;
-	grid-row: 5 / 8;
+	grid-column: 2 / 9;
+	grid-row: 12 / 18;
 }
 
 .sticker6 {
-	grid-column: 2 / 4 ;
-	grid-row: 9 /12 ;
+	grid-column: 7 / 13 ;
+	grid-row: 19 /25 ;
 }
 
 .sticker6 .album-sticker-vertical {
@@ -95,8 +96,8 @@
 }
 
 .sticker7 {
-	grid-column: 4 / 6;
-	grid-row: 9 / 12;
+	grid-column: 13 / 19;
+	grid-row: 19 / 25;
 	padding-left: 4px;
 }
 
@@ -105,10 +106,25 @@
 }
 
 .sticker8 {
-	grid-column: 9 / 12;
-	grid-row: 9 / 11;
+	grid-column: 17 / 24;
+	grid-row: 12 / 18;
 }
 
+.album-market-button {
+	display: flex;
+	margin: 0 auto;
+	font-size: 20px;
+	text-align: center;
+	margin-bottom: 20px;
+}
+
+.album-market-button button {
+	background-color: rgba(0, 0, 0);
+	border: none;
+	border-radius: 5px;
+	
+	
+}
 
 
 
@@ -197,60 +213,20 @@
 @media (max-width: 768px) {
 	.album-page {
 		display: grid;
-		width: 90%;
-		height: 800px;
+		width: 100%;
+		height: 600px;
 		/* 12 columnas iguales y 12 filas iguales */
-		grid-template-columns: repeat(12, calc(100% / 12));
-		grid-template-rows: repeat(12, calc(100% / 12));
 		margin: 0 auto;
 		padding-top: 10px;
 	}
 
-	.sticker1 {
-		grid-column: 9 / 13;
-		grid-row: 1 / 3;
-	}
 	
-	.sticker2 {
-		grid-column: 9 / 13 ;
-		grid-row: 7 / 10;
-	}
-	
-	.sticker3 {
-		grid-column: 3 / 7;
-		grid-row: 1 / 3;
-	}
-	
-	.sticker4 {
-		grid-column: 8 / 13;
-		grid-row: 4 / 6;
-	}
-	
-	.sticker5 {
-		grid-column: 2 / 6;
-		grid-row: 4 / 7;
-	}
-	
-	.sticker6 {
-		grid-column: 2 / 5 ;
-		grid-row: 8 /10 ;
-	}
-
-	.sticker7 {
-		grid-column: 5 / 8;
-		grid-row: 8 / 10;
-		padding-left: 3px;
-	}
-	
-	.sticker8 {
-		grid-column: 5 / 11;
-		grid-row: 11 / 13;
-	}
-
 	
 
-	.sticker1:hover, .sticker2:hover, .sticker3:hover, .sticker4:hover, .sticker5:hover, .sticker6:hover, .sticker7:hover, .sticker8:hover {
+	.sticker-pasted:hover {
 		transform: none;
 		transition: 0;
+		z-index: 0;
 	}
+	
 }
