--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -26,3 +26,12 @@ body {
 	justify-content: space-between;
 }
 
+.swiper-container {
+	width: 100%;
+	max-width: 100%;
+	max-height: 100%;
+	min-height: 0;
+	min-width: 0;
+	margin-bottom: 50px;
+  }
+
