--- a/src/styles/albumPage.css
+++ b/src/styles/albumPage.css
@@ -39,17 +39,18 @@
 .new-sticker-vertical {
 	display: inline-block;
 	position: relative;
-	width: 187.5px;
-	height: 250px;
+	width: 250px;
+	height: 187.5px;
 	border: 4px solid white;
 	overflow: hidden;
+	background-color: none;
 }
 
 .new-sticker-circular {
 	display: inline-block;
 	position: relative;
 	width: 250px;
-	height: 250px;
+	height: 187.5px;
 	border: none;
 	overflow: hidden;
 	border-radius: 50%;
