--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -35,3 +35,13 @@ body {
 	margin-bottom: 50px;
   }
 
+  .swiper-container-new-pack {
+	width: 100%;
+	max-width: 260px;
+	max-height: 100%;
+	min-height: 0;
+	min-width: 0;
+	margin-bottom: 50px;
+	
+  }
+
