--- a/src/styles/newPack.css
+++ b/src/styles/newPack.css
@@ -8,6 +8,7 @@
 	transform: rotateY(90deg);
     transition: all ease-in 0.5s;
 	position: absolute;
+	
 }
 
 .album-sticker-vertical .album-image-clicked-back {
@@ -20,6 +21,7 @@
 	transform: rotateY(90deg);
 	transition: all ease-in 0.5s;
 	position: absolute;
+	
 }
 
 .album-image-not-clicked-back {
@@ -30,6 +32,7 @@
 .new-sticker-not-clicked-back {
 	transform: rotateY(0deg);
 	transition-delay: 0.5s;
+	
 }
 
 .album-sticker .album-image-clicked {
@@ -40,14 +43,17 @@
 .new-sticker .new-sticker-clicked {
 	transition: all ease-in 0.5s;
 	transition-delay: 0.5s;
+	 
 }
 
 .album-sticker-vertical .album-image-clicked   {
+	
 	transition: all ease-in 0.5s;
 	transition-delay: 0.5s;
 }
 
 .new-sticker-vertical .new-sticker-clicked {
+	
 	transition: all ease-in 0.5s;
 	transition-delay: 0.5s;
 }
@@ -60,4 +66,22 @@
 .new-sticker-not-clicked {
 	transform: rotateY(90deg);
 	transition-delay: 0s;
+}
+
+.new-pack-border {	
+	position: relative;
+	border: 4px solid white;
+	width: calc(100% - 8px );
+	height: calc(100% - 8px);
+	transition: 1s ease-out; 
+	transition-delay: 1s;
+}
+
+.album-sticker-border {
+	position: relative;
+	border: 4px solid white;
+	width: calc(100% - 8px );
+	height: calc(100% - 8px);
+	transition: 1s ease-out; 
+	transition-delay: 1s;
 }
